# ai-research

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  PROJECT-SEED.md  README.md  REQUIREMENTS.md  pyproject.toml
.ai-research/: index.md  schema.toml  state.json
.claude/: settings.local.json
.claude/commands/: ask.md  ingest-inbox.md  ingest.md
.github/workflows/: ci.yml
docs/: STORIES.md  mcp-setup.md  mcp-threat-model.md
docs/stories/: .build-progress.md  epic-01-foundation-toolkit.md  epic-02-wiki-materialization.md  epic-03-slash-commands.md  epic-04-quality-docs.md  epic-05-phase-2.md  epic-06-mcp-server.md  epic-07-archive-after-ingest.md  epic-08-dual-source-links.md  non-functional-requirements.md
tests/: test_archive.py  test_ask_citations.py  test_ask_json_contract.py  test_ci_workflow.py  test_cli.py  test_extract_dispatch.py  test_extract_markdown.py  test_extract_pdf.py  test_extract_url.py  test_index_rebuild.py  test_materialize.py  test_materialize_archive.py  test_materialize_archive_entry.py  test_materialize_archive_idempotent.py  test_materialize_auto_index.py  test_materialize_idempotent.py  test_mcp_context.py  test_mcp_readonly_guarantee.py  test_mcp_server.py  test_mcp_tool_ask.py  test_mcp_tool_get_page.py  test_mcp_tool_list_pages.py  test_mcp_tool_search.py  test_readme.py  test_scan.py  test_schema.py  test_search.py  test_slash_commands.py  test_source_lookup.py  test_sources_rewrite.py  test_state.py  test_stubs.py  test_vault_lint.py  test_wiki_sources.py
wiki/: ai-2027.md  anthropic-research-team-landing-page.md  anthropic-s-project-glasswing-restricting-claude-mythos-to-security-researchers.md  claude-haiku-4-5-system-card.md  claude-mythos-preview-system-card.md  claude-opus-4-6-system-card.md  claude-sonnet-4-6-system-card.md  components-of-a-coding-agent.md  dario-amodei-machines-of-loving-grace.md  dario-amodei-the-adolescence-of-technology.md  dario-amodei.md  introducing-sonnet-4-6.md  labor-market-impacts-of-ai-a-new-measure-and-early-evidence.md  something-big-is-happening.md  the-big-llm-architecture-comparison.md  understanding-large-language-models.md  what-81-000-people-want-from-ai.md
(+131 files in other folders)
